--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "chalk": "^5.3.0"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "prettier": "3.3.1"
+  }
 }
